# treepacker

./: NOTES  README.md  bloom.py  degsplit.py  inkscapes  lebesquetest.py  packimage.py  parsevaltest.py  spectralradius.py
data/: drawing.shape  idk  square.shape  test.path
data/Test parts/Nest 1/: Nest showing 18 yield on a sheet (Probably can get more out of one sheet than this).dxf  Single Nest.dxf
data/Test parts/Nest with cutout/: Nest with inner cutout.dxf
data/test_part_2/: Half inch poly work file.dxf  Half sheet yield.dxf  Sheet division.xlsx  other way cleaned.dxf
weirdpackercpp/: CMakeLists.txt  meantest.py  notes_intersection
weirdpackercpp/src/: BallTree.hpp  BallTree.inl  Bezier.cpp  Bezier.hpp  Bezier.inl  CMakeLists.txt  Cutout.cpp  Cutout.hpp  Cutout.inl  CutoutSet.cpp  CutoutSet.hpp  EuclideanTransform.hpp  Mesh.cpp  Mesh.hpp  Notes  Optimize.cpp  Optimize.hpp  OptimizerCPU.cpp  OptimizerCPU.hpp  Path.cpp  Path.hpp  Renderer.cpp  Renderer.hpp  Shape.hpp  Svg.cpp  Svg.hpp  Triangle.cpp  Triangle.hpp  Triangle.inl  Triangulate.cpp  Triangulate.hpp  test_cutoutpacking.cpp  test_optimizer.cpp  test_path2shape.cpp  test_shape.cpp
weirdpackercpp/src/trail/: Bezier.cpp  Bezier.inl  CMakeLists.txt  Path.cpp  Path.hpp  Shape.cpp  Shape.hpp  Svg.cpp  Svg.hpp  Triangulate.hpp
